[package]
name = "codepong"
version = "0.1.0"
authors = ["_"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
chrono = "0.4.19"
futures = "0.3.14"
futures-util = "0.3.14"
gh-emoji = "1.0.3"
git2 = "0.13.18"
handlebars = "3.5.5"
heim = { version = "0.1.0-rc.1", features = ["disk"] }
hyper = { version = "0.14.7", features = ["http1", "server", "stream", "tcp"] }
irc = "0.15.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
serde_urlencoded = "0.7.0"
tokio = { version = "1.5.0", features = ["fs", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.6"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
uom = "0.30.0"
